.jjconflict-side-0/mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__doesnt_inject_style_for_message_that_handles_dark_mode_natively.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: html.to_string()
---
<html data-protonmail-message="true"><head>
    <style>
    .main {
      color: #000 !important;
    }
    html {
      background-color: #fff !important;
    }
    @media (prefers-color-scheme: dark) {
      .main {
        color: #fff !important;
      }
      html {
        background-color: #000 !important;
      }
    }
    </style>
  <style type="text/css">/* <light_and_dark_css> */</style></head>
  <body>
  

</body></html>
