.jjconflict-side-0/mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__inject_style_check_contrast.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: html.to_string()
---
<html data-protonmail-message="true"><head>
    <style>
    .case1 {
      background-color: black;
      color: black;
    }

    .case2 {
      background-color: black;
    }

    .case3 {
      background-color: white;
    }
    </style>
  <style type="text/css">/* <light_and_dark_css> */</style><style type="text/css">
                  @media ( prefers-color-scheme: dark ) {
                      [data-protonmail-message] .case1 {
background-color: #16171d !important;
color: #fff !important
 }[data-protonmail-message] .case2 {
background-color: #16171d !important
 }[data-protonmail-message] .case3 {
background-color: #191927 !important
 }


                  }
                </style></head>
  <body>
  

</body></html>
