.jjconflict-side-0/mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__inject_style_text_color_stylesheet_query_supported.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: html.to_string()
---
<html data-protonmail-message="true"><head>
    <style>
    .main {
      color: #000 !important;
    }
    html {
      background-color: #fff !important;
    }
    </style>
  <style type="text/css">/* <light_and_dark_css> */</style><style type="text/css">
                  @media ( prefers-color-scheme: dark ) {
                      [data-protonmail-message] .main {
color: #fff !important
 }html[data-protonmail-message] {
background-color: #191927 !important
 }


                  }
                </style></head>
  <body>
  

</body></html>
